attached certificate and statement of thesis prep

--- a/latex/Thesis/prelude.tex
+++ b/latex/Thesis/prelude.tex
@@ -51,11 +51,15 @@
 \maketitle
 
 %--------------------------------------------------------------------%
+\newpage
 % CERTIFICATE
 %     The first page after the title page.
-\makecertificate
-
-%--------------------------------------------------------------------%
+%\makecertificate
+%\includepdf[fitpaper=true, pages=-]{cert_sig1.pdf}
+\includegraphics[width=\textwidth]{thesis-cer_2.jpg}
+\newpage
+\includegraphics[width=\textwidth]{statement.png}
+%------------------------------------------------------------------%
 % COPYRIGHT PAGE
 %   - To include a copyright page use \copyrightpage
 % \copyrightpage
