--- a/latex/Thesis/prelude.tex
+++ b/latex/Thesis/prelude.tex
@@ -78,8 +78,10 @@ solutions,  linearization etc. are used for the cryptanalysis of
 round-reduced \KECCAK{}. These techniques are very effective for
 mounting preimage attacks on $2$ to $3$ rounds of round-reduced \KECCAK{}. 
 
-The main contribution of the thesis is a cryptanalysis of round reduced
-\KECCAK{}$[r:=800-384, c:=384]$ for $2$ rounds. The best-known preimage
+The main contribution of the thesis is a cryptanalysis of $2$ rounds of 
+round reduced
+\KECCAK{}$[r:=800-384, c:=384]$. 
+The best-known preimage
 attack for this variant of \KECCAK{} has the time complexity of
  $O(2^{64})$. We propose a preimage attack with an improved time and
 space complexity of $O(2^{44})$. We further analyze the linear structure
@@ -96,7 +98,7 @@ To my family
 % Acknowledgements
 \begin{acknowledgments}
 
-I would like to thank all the people who helped me during my thesis. I thank my thesis advisor \textbf{Dr. Shashank Singh} for his guidance and motivating me to keep trying.
+I would like to thank all the people who helped me during my thesis. I thank my thesis co-supervisor \textbf{Dr. Shashank Singh} for his guidance and motivating me to keep trying.
 My sincere thanks to my thesis co-supervisor \textbf{Prof. Manindra Agrawal}, who readily agreed to co-supervise me after Dr. Shashank Singh moved to IISER Bhopal. 
 % 
 % I also thank the reviewers of Indocrypt-$2018$ for providing comments which helped in improving the work. In particular, we thank an anonymous reviewer for suggesting us to implement the attack on the $\Keccak[r:=400-192,\, c:=192]$ and also providing insights to further improve the attack. 
