--- a/latex/Thesis/technical.tex
+++ b/latex/Thesis/technical.tex
@@ -247,8 +247,8 @@ In this section, we mention the notations and observations, which are used in th
 
 In the analysis, we represent a \KECCAK{} state by the lanes. There are 
  total $25:=5 \times 5$ lanes and each lane in a state is represented by a
- variable which is a $64$-bit array. 
-A variable with a number in round bracket $"( . )"$ represents the shift of the bits in array towards MSB. A variable with a number in square bracket $"[ . ]"$ represents the bit value of the variable at that index. If there are multiple numbers in the square bracket then it represents the corresponding bit values.
+ variable which is a $32$-bit array. 
+A variable with a number in round bracket $``( . )"$ represents the shift of the bits in array towards MSB. A variable with a number in square bracket $``[ . ]"$ represents the bit value of the variable at that index. If there are multiple numbers in the square bracket then it represents the corresponding bit values.
 
 %% More details
 
